# dogfood

./: README.md  run.sh
backend/: .gitignore  __init__.py  pyproject.toml
backend/api/: api.py
client/: README.md  package.json
client/src/: App.js
server/: README.md  pyproject.toml
server/src/: __init__.py  db.py  server.py
